src/test/ui/suggestions/missing-assoc-type-bound-restriction.stderr
error[E0277]: the trait bound `<T as Parent>::Assoc: Child<A>` is not satisfied
  --> $DIR/missing-assoc-type-bound-restriction.rs:17:19
   |
LL | trait Parent {
   |       ------
LL |     type Ty;
LL |     type Assoc: Child<Self::Ty>;
   |                 --------------- required by this bound in `Parent`
...
LL | impl<A, T: Parent<Ty = A>> Parent for ParentWrapper<T> {
   |                   ^^^^^^                              - help: consider further restricting the associated type: `where <T as Parent>::Assoc: Child<A>`
   |                   |
   |                   the trait `Child<A>` is not implemented for `<T as Parent>::Assoc`

error[E0277]: the trait bound `<T as Parent>::Assoc: Child<A>` is not satisfied
  --> $DIR/missing-assoc-type-bound-restriction.rs:20:5
   |
LL |     type Assoc: Child<Self::Ty>;
   |          ----- associated type defined here
...
LL | impl<A, T: Parent<Ty = A>> Parent for ParentWrapper<T> {
   | ------------------------------------------------------- help: consider further restricting the associated type: `where <T as Parent>::Assoc: Child<A>`
   | |
   | in this `impl` item
...
LL |     type Assoc = ChildWrapper<T::Assoc>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Child<A>` is not implemented for `<T as Parent>::Assoc`
   |
   = note: required because of the requirements on the impl of `Child<A>` for `ChildWrapper<<T as Parent>::Assoc>`

error[E0277]: the trait bound `<T as Parent>::Assoc: Child<A>` is not satisfied
  --> $DIR/missing-assoc-type-bound-restriction.rs:20:5
   |
LL | trait Parent {
   |       ------
LL |     type Ty;
LL |     type Assoc: Child<Self::Ty>;
   |                 --------------- required by this bound in `Parent`
...
LL | impl<A, T: Parent<Ty = A>> Parent for ParentWrapper<T> {
   |                                                       - help: consider further restricting the associated type: `where <T as Parent>::Assoc: Child<A>`
...
LL |     type Assoc = ChildWrapper<T::Assoc>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Child<A>` is not implemented for `<T as Parent>::Assoc`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
